--- a/project/src/main/resources/templates/addViolation.html
+++ b/project/src/main/resources/templates/addViolation.html
@@ -36,12 +36,12 @@
                         </select>
                     </div>
                     <div class="form-group text-left">
-                        <label for="description">Mô tả vi phạm <span class="text-red">*</span></label>
-                        <input type="text" class="form-control" id="description" placeholder="Mô tả vi phạm">
-                    </div>
-                    <div class="form-group text-left">
                         <label for="substractGrade">Điểm trừ <span class="text-red">*</span></label>
                         <input type="number" class="form-control" id="substractGrade" placeholder="1">
+                    </div>
+                    <div class="form-group text-left">
+                        <label for="description">Mô tả vi phạm <span class="text-red">*</span></label>
+                        <textarea class="form-control" id="description" placeholder="Mô tả vi phạm" rows="3"></textarea>
                     </div>
                     <div class="error addViolation-err text-left"></div>
                     <input type="button" name="submit" id="submit" class="submit action-button" value="TẠO"/>
