--- a/project/src/main/resources/templates/gradingToEmulation.html
+++ b/project/src/main/resources/templates/gradingToEmulation.html
@@ -43,7 +43,7 @@
                     <th></th>
                     <th>Vi phạm</th>
                     <th>Điểm trừ</th>
-                    <th>Số lượng</th>
+                    <th>Số lần</th>
                     <th>Tổng điểm trừ</th>
                     </thead>
                     <tbody>
@@ -145,7 +145,7 @@
                         <thead>
                         <th>Mô tả lỗi</th>
                         <th>Điểm trừ</th>
-                        <th>Số lượng</th>
+                        <th>Số lần</th>
                         <th>Tổng điểm trừ</th>
                         </thead>
                         <tbody>
