--- a/project/src/main/resources/templates/violationListOfClass.html
+++ b/project/src/main/resources/templates/violationListOfClass.html
@@ -59,7 +59,7 @@
                 <label class="violation-date">Ngày</label>
                 <label class="violation-details">Mô tả lỗi</label>
                 <label class="violation-substract-grade">Điểm trừ</label>
-                <label class="violation-quantity">Số lượng</label>
+                <label class="violation-quantity">Số lần</label>
                 <label class="violation-total">Tổng điểm trừ</label>
                 <label class="violation-action"></label>
             </div>
@@ -109,7 +109,7 @@
                         <thead>
                         <th>Mô tả lỗi</th>
                         <th>Điểm trừ</th>
-                        <th>Số lượng</th>
+                        <th>Số lần</th>
                         <th>Tổng điểm trừ</th>
                         </thead>
                         <tbody>
@@ -166,7 +166,7 @@
                     </div>
                     <div class="reason-change"><span class="title">Lý do thay đổi: </span> <span class="info ml-4">Sao đỏ chấm nhầm</span>
                     </div>
-                    <div class="quantity"><span class="title">Số lượng: </span> <span class="info ml-4">2 -> <span
+                    <div class="quantity"><span class="title">Số lần: </span> <span class="info ml-4">2 -> <span
                             class="text-red font-500">1</span></span></div>
                     <div class="totals"><span class="title">Tổng điểm trừ: </span> <span class="info ml-4">0.4 -> <span
                             class="text-red font-500">0.2</span></span></div>
