--- a/project/src/main/resources/templates/addNewViolation.html
+++ b/project/src/main/resources/templates/addNewViolation.html
@@ -63,7 +63,7 @@
                     </span></th>
                     <th>Vi phạm</th>
                     <th>Điểm trừ</th>
-                    <th>Số lượng</th>
+                    <th>Số lần</th>
                     <th>Tổng điểm trừ</th>
                     </thead>
                     <tbody>
@@ -162,7 +162,7 @@
                         <thead>
                         <th>Mô tả lỗi</th>
                         <th>Điểm trừ</th>
-                        <th>Số lượng</th>
+                        <th>Số lần</th>
                         <th>Tổng điểm trừ</th>
                         </thead>
                         <tbody>
