--- a/project/src/main/resources/templates/editViolation.html
+++ b/project/src/main/resources/templates/editViolation.html
@@ -22,29 +22,30 @@
 <div th:replace="fragments/header :: header"></div>
 
 <div class="container">
-    <div class="col-xl-6 col-md-auto mx-auto veen">
-        <h1>Thông tin lỗi vi phạm</h1>
-        <hr>
-        <div class="info-des col-xl-10 mx-auto">
-            <div class="input-info">
-                <label for="violationTypeName">Nội quy</label>
-                <select class="basic-slide" id="violationTypeName">
-                    <option value="0" selected>-- Chọn chọn nội quy ---</option>
-                </select>
-            </div>
-            <div class="input-info">
-                <label for="substractGrade">Điểm trừ</label>
-                <input class="basic-slide" id="substractGrade" type="number" value=""/>
-            </div>
-            <div class="input-info align-items-start">
-                <label for="description">Mô tả vi phạm</label>
-                <textarea class="basic-slide" id="description" rows="3" value=""></textarea>
-            </div>
-
-            <div class="error violation-err"></div>
-            <div class="text-center">
-                <button type="button" class="btn btn-customer" id="editInfo">CHỈNH SỬA</button>
-            </div>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3 mx-auto">
+            <form id="msform">
+                <h2 class="fs-title">Thông tin lỗi vi phạm</h2>
+                <fieldset>
+                    <p class="note">(<span class="text-red">*</span>) Bắt buộc </p>
+                    <div class="form-group text-left">
+                        <label for="violationTypeName">Nội quy <span class="text-red">*</span></label>
+                        <select class="form-control" id="violationTypeName">
+                            <option value="0" selected>-- Chọn nội quy ---</option>
+                        </select>
+                    </div>
+                    <div class="form-group text-left">
+                        <label for="substractGrade">Điểm trừ <span class="text-red">*</span></label>
+                        <input type="number" class="form-control" id="substractGrade" value="">
+                    </div>
+                    <div class="form-group text-left">
+                        <label for="description">Mô tả vi phạm <span class="text-red">*</span></label>
+                        <textarea class="form-control" id="description" rows="3" value=""></textarea>
+                    </div>
+                    <div class="error violation-err text-left"></div>
+                    <button type="button" class="btn btn-customer" id="editInfo">CHỈNH SỬA</button>
+                </fieldset>
+            </form>
         </div>
     </div>
 </div>
