1. Add API for module 6 + Module 8 2. Edit structure for template

--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
     <div><a th:href="@{editSchoolYear}">Sửa thông tin năm học</a></div>
     <br>
     <h2>Module 7: Trực tuần</h2>
-    <div><a th:href="@{assignWeekly}">Xem phân công trực tuần</a></div>
+    <div><a th:href="@{assignEmulation}">Xem phân công trực tuần</a></div>
     <div><a th:href="@{gradingToEmulation}">Chấm điểm thi đua</a></div>
     <div><a th:href="@{violationListOfClass}">Xem danh sách lỗi theo ngày</a></div>
     <div><a th:href="@{addNewViolation}">Thêm vi phạm mới</a></div>
@@ -68,7 +68,6 @@
     <h2>Module 8: Quản lý thời gian</h2>
     <div><a th:href="@{manageViolationEnteringTime}">Xem thời gian thực thi chấm điểm</a></div>
     <div><a th:href="@{createViolationEnteringTime}">Thêm thời gian chấm</a></div>
-    <div><a th:href="@{editViolationEnteringTime}">Sửa thời gian chấm</a></div>
     <br>
     <h2>Module 9: Quản lý xếp hạng</h2>
     <div><a th:href="@{rankByWeek}">Xếp hạng theo tuần</a></div>
