--- a/project/src/main/resources/templates/manageAccount/login.html
+++ b/project/src/main/resources/templates/manageAccount/login.html
@@ -41,7 +41,7 @@
                         <label for="password">Mật khẩu <span class="text-red">*</span></label>
                         <input type="password" class="form-control" id="password" required>
                     </div>
-                    <div class="error createClass-err text-left"></div>
+                    <div class="error login-err text-left"></div>
                     <input type="button" name="signin" id="signin" class="form-submit" value="ĐĂNG NHẬP"/>
                 </fieldset>
             </form>
