--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -300,19 +300,19 @@ body.loading .modal-loading {
     font-size: 18px;
 }
 
-.login-form .form-group input[type=text], .form-group input[type=password] {
-    width: 100%;
-    display: block;
-    border: none;
-    border-bottom: 1px solid #999;
-    padding: 6px 30px;
-    outline: none;
-    background: transparent;
-}
+/*.login-form .form-group input[type=text], .form-group input[type=password] {*/
+/*    width: 100%;*/
+/*    display: block;*/
+/*    border: none;*/
+/*    border-bottom: 1px solid #999;*/
+/*    padding: 6px 30px;*/
+/*    outline: none;*/
+/*    background: transparent;*/
+/*}*/
 
-.login-form .form-group input[type=text]:focus, .form-group input[type=password]:focus {
-    border-bottom: 1px solid #222;
-}
+/*.login-form .form-group input[type=text]:focus, .form-group input[type=password]:focus {*/
+/*    border-bottom: 1px solid #222;*/
+/*}*/
 
 .form-button {
     text-align: center;
