--- a/project/src/main/resources/templates/schoolYear/schoolYearList.html
+++ b/project/src/main/resources/templates/schoolYear/schoolYearList.html
@@ -2,12 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>.::Quản lý thời gian thực thi chấm điểm::.</title>
+    <title>.::Quản lý năm học::.</title>
     <link th:href="@{/img/logo.png}" rel="shortcut icon" type="image/x-icon"/>
 
     <!-- jQuery library -->
     <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
-
+    <!--    &lt;!&ndash;DataTable&ndash;&gt;-->
+    <!--    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>-->
+    <!--    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>-->
+    <!--    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">-->
+    <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">-->
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/popper.min.js}"></script>
@@ -24,31 +28,23 @@
 <div class="container">
     <div class="table-wrapper">
         <div class="table-title">
-            <h2>Thời gian thực thi chấm điểm</h2>
+            <h2>Danh sách năm học</h2>
         </div>
         <div class="table-title-2">
             <div class="col-sm-6 d-flex justify-content-end align-items-center">
-                <a href="#deleteModal" class="btn btn-success" data-toggle="modal" onclick="checkSelect()">
-                    <span>Xóa</span>
-                </a>
-                <a th:href="@{createViolationEnteringTime}" class="btn btn-success">
-                    <span>Thêm thời gian chấm</span>
+                <a th:href="@{addSchoolYear}" class="btn btn-success">
+                    <span>Thêm năm học</span>
                 </a>
             </div>
         </div>
-        <table class="table table-hover">
+        <table class="table table-hover" id="tableSchoolYear">
             <thead>
             <tr class="align-items-center">
-                <th>
-                    <span class="custom-checkbox">
-                        <input type="checkbox" id="selectAll">
-                        <label for="selectAll"></label>
-                    </span>
-                </th>
-                <th>Chức vụ</th>
-                <th>Thứ</th>
-                <th>Thời gian bắt đầu</th>
-                <th>Thời gian kết thúc</th>
+                <th>STT</th>
+                <th>Tên năm học</th>
+                <th>Ngày bắt đầu</th>
+                <th>Ngày kết thúc</th>
+                <th></th>
             </tr>
             </thead>
             <tbody>
@@ -66,8 +62,8 @@
             <div class="modal-body text-center">
             </div>
             <div class="modal-footer">
-                <input type="submit" class="btn btn-danger" data-toggle="modal" data-target="#deleteSuccess"
-                       id="deleteTime" data-dismiss="modal" value="CÓ">
+                <input type="submit" class="btn btn-danger" data-toggle="modal"
+                       id="btnDelete" data-target="#deleteSuccess" data-dismiss="modal" value="CÓ">
                 <input type="button" class="btn btn-primary" data-dismiss="modal" value="KHÔNG">
             </div>
         </div>
@@ -76,19 +72,18 @@
 
 <!--    Modal Delete Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="deleteSuccess">
-    <div class="modal-dialog  modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
             </div>
             <div class="modal-footer">
-                <a type="button" class="btn btn-primary" th:href="@{manageViolationEnteringTime}">ĐÓNG</a>
+                <a type="button" class="btn btn-primary" th:href="@{schoolYearList}">ĐÓNG</a>
             </div>
         </div>
     </div>
 </div>
-
 <div class="modal-loading"></div>
 <div th:replace="fragments/footer :: footer"></div>
-<script type="text/javascript" th:src="@{/js/manageViolationEnteringTime/manageViolationEnteringTime.js}"></script>
+<script type="text/javascript" th:src="@{/js/schoolYear/schoolYearList.js}"></script>
 </body>
 </html>
