--- a/project/src/main/resources/templates/manageTeacher/manageTeacher.html
+++ b/project/src/main/resources/templates/manageTeacher/manageTeacher.html
@@ -81,29 +81,22 @@
 
 <!-- Delete Modal HTML -->
 <div id="deleteTeacherModal" class="modal fade">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <form>
-                <div class="modal-header">
-                    <h4 class="modal-title">Xóa giáo viên</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">
-
+                <div class="modal-body text-center">
                 </div>
                 <div class="modal-footer">
                     <input type="submit" class="btn btn-danger" data-toggle="modal" data-target="#deleteSuccess"
                            id="deleteTeacher" data-dismiss="modal" value="CÓ">
                     <input type="button" class="btn btn-primary" data-dismiss="modal" value="KHÔNG">
                 </div>
-            </form>
         </div>
     </div>
 </div>
 
 <!--    Modal Delete Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="deleteSuccess">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3 img-success hide" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
