--- a/project/src/main/resources/templates/manageClass/editClass.html
+++ b/project/src/main/resources/templates/manageClass/editClass.html
@@ -14,8 +14,7 @@
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <!--Font-Awesome-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto|Varela+Round'>
+
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 </head>
@@ -24,48 +23,48 @@
 <div th:replace="fragments/header :: header"></div>
 
 <div class="container">
-    <div class="col-xl-6 col-md-auto mx-auto veen">
-        <h1>Thông tin lớp</h1>
-        <hr>
-        <div class="info-des col-xl-10 mx-auto">
-            <div class="input-info">
-                <label for="grade">Khối</label>
-                <input class="basic-slide" id="grade" type="text" value="" disabled/>
-            </div>
-            <div class="input-info">
-                <label for="giftedClassName">Hệ chuyên</label>
-                <input class="basic-slide" id="giftedClassName" type="text" value="" disabled/>
-            </div>
-            <div class="input-info">
-                <label for="identifier">Tên định danh</label>
-                <input class="basic-slide" id="identifier" type="text" value=""/>
-            </div>
-            <div class="input-info">
-                <label for="status" class="label-customer">Trạng thái</label>
-                <div class="basic-slide text-left" id="status">
-                    <div class="form-check">
-                        <div class="form-check-label">
-                            <input type="radio" class="form-check-input" value="0" name="optradio">Hoạt động
-                        </div>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3 mx-auto">
+            <form id="msform">
+                <h2 class="fs-title">Thông tin lớp</h2>
+                <fieldset>
+                    <p class="note">(<span class="text-red">*</span>) Bắt buộc </p>
+                    <div class="form-group text-left">
+                        <label for="grade">Khối <span class="text-red">*</span></label>
+                        <input type="text" class="form-control" id="grade" disabled>
                     </div>
-                    <div class="form-check">
-                        <div class="form-check-label">
-                            <input type="radio" class="form-check-input" value="1" name="optradio">Khóa
-                        </div>
+                    <div class="form-group text-left">
+                        <label for="giftedClassName">Hệ chuyên <span class="text-red">*</span></label>
+                        <input type="text" class="form-control" id="giftedClassName" disabled>
                     </div>
-                </div>
-            </div>
-            <div class="error classInfo-err"></div>
-            <div class="text-center">
-                <button type="button" class="btn btn-customer" id="editInfo">CHỈNH SỬA</button>
-            </div>
+                    <div class="form-group text-left">
+                        <label for="identifier">Tên định danh <span class="text-red">*</span></label>
+                        <input type="text" class="form-control" id="identifier">
+                    </div>
+                    <div class="form-group text-left">
+                        <label>Trạng thái <span class="text-red">*</span></label>
+                            <div class="form-check">
+                                <div class="form-check-label">
+                                    <input type="radio" class="form-check-input" value="0" name="optradio">Hoạt động
+                                </div>
+                            </div>
+                            <div class="form-check">
+                                <div class="form-check-label">
+                                    <input type="radio" class="form-check-input" value="1" name="optradio">Khóa
+                                </div>
+                            </div>
+                    </div>
+                    <div class="error classInfo-err text-left"></div>
+                    <button type="button" class="btn btn-customer" id="editInfo">CHỈNH SỬA</button>
+                </fieldset>
+            </form>
         </div>
     </div>
 </div>
 
 <!-- Confirm edit Modal HTML -->
 <div id="confirmEditModal" class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-body text-center">
             </div>
@@ -79,7 +78,7 @@
 
 <!--    Modal Edit Information Success-->
 <div class="modal" tabindex="-1" role="dialog" id="editInfoSuccess">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
