--- a/project/src/main/resources/templates/manageTeacher/createTeacher.html
+++ b/project/src/main/resources/templates/manageTeacher/createTeacher.html
@@ -46,19 +46,17 @@
                         <input type="email" class="form-control" id="email" placeholder="anv@gmail.com">
                     </div>
                     <div class="error createTeacher-err text-left"></div>
-                    <input type="button" name="submit" id="submit" class="submit action-button" value="TẠO"/>
+                    <input type="button" data-toggle="modal" data-target="#createSuccess" id="submit" class="submit action-button" value="TẠO"/>
                 </fieldset>
             </form>
         </div>
     </div>
 </div>
 <!--    Modal Create Success-->
-<div class="modal" tabindex="-1" role="dialog" id="createSuccess">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" tabindex="-1" role="dialog" id="createSuccess">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
-                <h5>Thêm giáo viên thành công!</h5>
             </div>
             <div class="modal-footer">
                 <a type="button" class="btn btn-primary" th:href="@{createTeacher}">ĐÓNG</a>
