--- a/project/src/main/resources/templates/manageViolation/addViolationType.html
+++ b/project/src/main/resources/templates/manageViolation/addViolationType.html
@@ -46,7 +46,7 @@
 </div>
 <!--    Modal Create Success-->
 <div class="modal" tabindex="-1" role="dialog" id="createSuccess">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
