--- a/project/src/main/resources/templates/schoolYear/editSchoolYear.html
+++ b/project/src/main/resources/templates/schoolYear/editSchoolYear.html
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                     <div class="error editSchoolYear-err text-left"></div>
-                    <input type="button" id="editInfo" data-target="" class="submit btn-customer" value="CHỈNH SỬA"
+                    <input type="button" id="editInfo" data-target="#editInfoSuccess" class="submit btn-customer" value="CHỈNH SỬA"
                            data-toggle="modal"/>
                 </fieldset>
             </form>
@@ -55,7 +55,7 @@
 
 <!--    Modal Edit Information Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="editInfoSuccess">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
