--- a/project/src/main/resources/templates/timetable/manageTimetable.html
+++ b/project/src/main/resources/templates/timetable/manageTimetable.html
@@ -56,7 +56,7 @@
 
 <!-- Override Modal HTML -->
 <div id="overrideTimetableModal" class="modal fade">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <form>
                 <div class="modal-body text-center">
@@ -77,7 +77,7 @@
 
 <!--    Modal Override Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="overrideSuccess">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3 img-success" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
